Generational ZGC: compiler/gcbarriers/UnsafeIntrinsicsTest.java fails in nmt_commit

XMLWordPrintable

    • gc
    • 21
    • b01

        The failure happens because we have extra verification code that is incorrect to use when calling the NMT tracking code.

        Here's log file snippet:

        #section:main
        ----------messages:(7/765)----------
        command: main -XX:+UseZGC -XX:+UnlockDiagnosticVMOptions -XX:+ZVerifyOops -XX:ZCollectionInterval=1 -XX:-CreateCoredumpOnCrash -XX:CompileCommand=dontinline,*::mergeImpl* compiler.gcbarriers.UnsafeIntrinsicsTest
        reason: User specified action: run main/othervm -XX:+UseZGC -XX:+UnlockDiagnosticVMOptions -XX:+ZVerifyOops -XX:ZCollectionInterval=1 -XX:-CreateCoredumpOnCrash -XX:CompileCommand=dontinline,*::mergeImpl* compiler.gcbarriers.UnsafeIntrinsicsTest
        started: Thu Jun 08 16:57:40 UTC 2023
        Mode: othervm [/othervm specified]
        Additional options from @modules: --add-modules java.base --add-exports java.base/jdk.internal.misc=ALL-UNNAMED --add-opens java.base/jdk.internal.misc=ALL-UNNAMED
        finished: Thu Jun 08 16:57:41 UTC 2023
        elapsed time (seconds): 1.738
        ----------configuration:(5/166)----------
        <snip>

        ----------System.out:(16/904)----------
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # SIGSEGV (0xb) at pc=0x00007f1f6f71ba90, pid=1001731, tid=1001734
        #
        # JRE version: (21.0+26) (fastdebug build )
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 21-ea+26-LTS-2327, mixed mode, sharing, tiered, compressed class ptrs, z gc, linux-amd64)
        # Problematic frame:
        # V [libjvm.so+0x19d3a90] ZPhysicalMemoryManager::nmt_commit(zoffset, unsigned long) const+0xb0
        #
        # CreateCoredumpOnCrash turned off, no core file dumped
        #
        # An error report file with more information is saved as:
        # /opt/mach5/mesos/work_dir/slaves/cd627e65-f015-4fb1-a1d2-b6c9b8127f98-S1058/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/69630e22-1db4-46ce-a756-6e23cc9835c7/runs/31397100-7e82-4520-986e-f9e3e88d1558/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_compiler_all_gcs/scratch/0/hs_err_pid1001731.log
        #
        #
        ----------System.err:(0/0)----------
        ----------rerun:(47/7826)*----------

              Assignee:
              Stefan Karlsson
              Reporter:
              Stefan Karlsson
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: