8309675: Generational ZGC: compiler/gcbarriers/UnsafeIntrinsicsTest.java fails in nmt_commit

Reviewed-by: dcubed
Backport-of: c4e6542514be19cebb41a0c390645db0a191504f